--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -9,16 +9,16 @@
 
     <include layout="@layout/part_top_panel" />
 
-     <ProgressBar
-         android:id="@+id/loadingProfileProgressBar"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:layout_gravity="center"
-         android:indeterminateTint="@color/panelColor"
-         app:layout_constraintBottom_toTopOf="parent"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="parent" />
+    <ProgressBar
+        android:id="@+id/loadingProfileProgressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminateTint="@color/panelColor"
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <LinearLayout
         android:id="@+id/mainProfileLayout"
@@ -41,7 +41,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:padding="1dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -65,11 +66,6 @@
                     android:layout_weight="1"
                     android:orientation="vertical"
                     android:padding="1dp">
-
-                    <TextView
-                        android:id="@+id/nameProfileText"
-                        style="@style/mainTextProfile"
-                        android:text="TextView" />
 
                     <TextView
                         android:id="@+id/cityProfileText"
@@ -114,8 +110,8 @@
                     <TextView
                         android:id="@+id/withoutRatingProfileText"
                         style="@style/buttonText"
-                        android:layout_width="250dp"
-                        android:layout_height="@dimen/main_button_height"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:gravity="center"
                         android:text="Оценок еще нет" />
                 </LinearLayout>
@@ -123,11 +119,15 @@
                 <Button
                     android:id="@+id/subscriptionsProfileBtn"
                     style="@style/smallMainButtonOther"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
                     android:text="Подписки" />
 
                 <Button
                     android:id="@+id/dialogsProfileBtn"
                     style="@style/smallMainButtonOther"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1"
                     android:text="Диалог" />
 
                 <!--<LinearLayout
@@ -155,15 +155,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:padding="1dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/addServicesProfileBtn"
                 style="@style/smallMainButtonOther"
                 android:layout_width="wrap_content"
+                android:layout_marginEnd="2dp"
                 android:layout_height="@dimen/main_button_height"
                 android:text="@string/addServices" />
         </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
