--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -63,7 +63,7 @@
     </style>
 
     <!-- Style for icons -->
-    <style name="icon" >
+    <style name="icon">
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -72,7 +72,7 @@
         <item name="fontFamily">@font/font_awesome_second_regular</item>
     </style>
 
-    <style name="iconSolid" parent="icon" >
+    <style name="iconSolid" parent="icon">
         <item name="fontFamily">@font/font_awesome_solid</item>
     </style>
 
@@ -127,6 +127,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="fontFamily">@font/roboto_black</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/black</item>
         <item name="android:padding">2dp</item>
     </style>
 
@@ -145,7 +146,7 @@
         <item name="android:padding">5dp</item>
     </style>
     <!-- Style for block style -->
-    <style name="block" >
+    <style name="block">
         <item name="android:elevation">5dp</item>
         <item name="android:layout_marginBottom">10dp</item>
         <item name="android:layout_width">match_parent</item>
@@ -195,6 +196,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
     </style>
+
     <style name="loginPackageMainLinearLayout">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0dp</item>
@@ -251,10 +253,16 @@
         <item name="android:textColorHint">@color/white</item>
     </style>
 
-    <style name="smallMainButtonOther" parent="mainButton">
+    <style name="smallMainButtonOther">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:elevation">5dp</item>
         <item name="android:background">@drawable/main_button</item>
-        <item name="android:width">170dp</item>
-        <item name="android:height">36dp</item>
+        <item name="android:width">160dp</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">36dp</item>
     </style>
 
 </resources>
