--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -7,7 +7,7 @@
     android:background="@color/mainColorBG"
     tools:context="com.bunbeauty.ideal.myapplication.editing.EditProfile">
 
-    <include layout="@layout/part_top_panel"/>
+    <include layout="@layout/part_top_panel" />
 
     <ScrollView
         android:id="@+id/scrollView3"
@@ -35,7 +35,7 @@
                 android:padding="5dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:padding="5dp">
@@ -49,9 +49,10 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center">
+                    android:layout_weight="1.5"
+                    android:layout_gravity="bottom">
 
                     <Button
                         android:id="@+id/logOutEditProfileBtn"
@@ -125,6 +126,7 @@
                     android:hint="@string/phone"
                     android:inputType="phone" />
             </LinearLayout>
+
             <EditText
                 android:id="@+id/codeEditProfileInput"
                 style="@style/mainBlockText"
@@ -152,6 +154,7 @@
                 android:text="@string/resendCode" />
         </LinearLayout>
     </ScrollView>
+
     <Button
         android:id="@+id/editProfileEditProfileBtn"
         style="@style/mainButtonOther"
@@ -162,6 +165,6 @@
         app:layout_constraintBottom_toTopOf="@id/bottomPanelLayout"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-    <include
-        layout="@layout/part_bottom_panel"/>
+
+    <include layout="@layout/part_bottom_panel" />
 </androidx.constraintlayout.widget.ConstraintLayout>
