--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -3,19 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/allPages"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.searchService.MainScreenActivity">
 
-    <LinearLayout
-        android:id="@+id/topMainScreenLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </LinearLayout>
+    <include layout="@layout/part_top_panel" />
 
     <LinearLayout
         android:id="@+id/searchMainScreenLayout"
@@ -24,19 +14,16 @@
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </LinearLayout>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <LinearLayout
         android:id="@+id/borderMainScreenLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </LinearLayout>
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <!-- Категории -->
     <HorizontalScrollView
@@ -76,8 +63,8 @@
                 android:id="@+id/tagsInnerMainScreenLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:orientation="vertical" />
 
         </ScrollView>
 
@@ -89,23 +76,23 @@
             <Button
                 android:id="@+id/minimizeTagsMainScreenBtn"
                 style="@style/lightBlueButton"
-                android:paddingTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:fontFamily="@font/font_awesome_solid"
+                android:gravity="center_horizontal"
+                android:paddingTop="8dp"
                 android:text="" />
 
             <Button
                 android:id="@+id/clearTagsMainScreenBtn"
                 style="@style/lightBlueButton"
-                android:paddingTop="8dp"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
                 android:layout_weight="1"
-                android:gravity="center_horizontal"
                 android:fontFamily="@font/font_awesome_solid"
+                android:gravity="center_horizontal"
+                android:paddingTop="8dp"
                 android:text="" />
         </LinearLayout>
     </LinearLayout>
@@ -116,11 +103,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/panelColor"
-        app:layout_constraintBottom_toTopOf="@+id/resultsMainScreenRecycleView"
+        app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categoryMainScreenScroll"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="parent"/>
 
 
     <!-- Главный экран -->
@@ -128,20 +114,12 @@
         android:id="@+id/resultsMainScreenRecycleView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/bottomMainScreenLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tagsMainScreenLayout" />
 
-    <LinearLayout
-        android:id="@+id/bottomMainScreenLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+    <include layout="@layout/part_bottom_panel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
