--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,8 @@
     <!-- Base application theme. -->
     <style name="allPages" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:background">@color/mainColorBG</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
