--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -108,8 +108,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent"/>
 
-
-    <!-- Главный экран -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultsMainScreenRecycleView"
         android:layout_width="match_parent"
@@ -119,6 +117,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tagsMainScreenLayout" />
+
+    <TextView
+        android:id="@+id/noResultMainScreenText"
+        android:gravity="center"
+        style="@style/mainTextProfile"
+        android:text="В вашем регионе нет услуг :("
+        app:layout_constraintBottom_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent" />
 
     <include layout="@layout/part_bottom_panel" />
 
