--- a/app/src/main/res/layout/service_activity.xml
+++ b/app/src/main/res/layout/service_activity.xml
@@ -2,17 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/mainColorBG"
+    style="@style/allPages"
     tools:context="com.bunbeauty.ideal.myapplication.cleanArchitecture.mvp.activities.service.ServiceActivity">
 
-    <LinearLayout
-        android:id="@+id/topServiceLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include layout="@layout/part_top_panel" />
 
     <ProgressBar
         android:id="@+id/progressServiceBar"
@@ -20,32 +13,31 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:indeterminateTint="@color/panelColor"
-        app:layout_constraintBottom_toTopOf="@+id/bottomServiceLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topServiceLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout" />
 
     <ScrollView
         android:id="@+id/mainServiceScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginBottom="10dp"
+        android:layout_margin="2dp"
         android:scrollbars="none"
-        app:layout_constraintBottom_toTopOf="@+id/bottomServiceLayout"
+        app:layout_constraintBottom_toTopOf="@+id/bottomPanelLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topServiceLayout">
+        app:layout_constraintTop_toBottomOf="@+id/topPanelLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <!-- Верхняя часть весь текст: цена, название, рейтинг-->
+
             <LinearLayout
                 android:id="@+id/mainServiceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="10dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -60,10 +52,6 @@
                         style="@style/mainBlockText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="0dp"
-                        android:layout_marginEnd="0dp"
-                        android:padding="10dp"
-                        android:paddingEnd="0dp"
                         android:text="Рейтинг: " />
 
                     <TextView
@@ -71,10 +59,7 @@
                         style="@style/mainBlockText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:paddingStart="0dp"
-                        android:paddingEnd="0dp"
-                        android:text="Оценок еще нет"
-                        android:visibility="gone" />
+                        android:text="Оценок еще нет" />
 
                     <RatingBar
                         android:id="@+id/ratingServiceBar"
@@ -82,19 +67,16 @@
                         android:layout_width="90dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginLeft="10dp"
                         android:background="@color/white"
                         android:isIndicator="true"
                         android:padding="5dp"
-                        android:theme="@style/ratingBarColors"
-                        android:visibility="gone" />
+                        android:theme="@style/ratingBarColors" />
 
                     <TextView
                         android:id="@+id/ratingServiceText"
                         style="@style/defaultText"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp" />
+                        android:layout_height="wrap_content" />
 
                     <TextView
                         android:id="@+id/countOfRatesServiceText"
@@ -138,8 +120,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/block_text"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
+                    android:orientation="horizontal">
 
                     <TextView
                         style="@style/mainBlockText"
@@ -163,8 +144,7 @@
                             android:background="@color/panelColor"
                             android:gravity="center"
                             android:text="@string/premium_ico"
-                            android:textColor="@color/white"
-                            android:visibility="gone" />
+                            android:textColor="@color/white" />
 
                         <TextView
                             android:id="@+id/onPremiumServiceText"
@@ -174,8 +154,7 @@
                             android:background="@color/yellow"
                             android:gravity="center"
                             android:text="@string/premium_ico"
-                            android:textColor="@color/black"
-                            android:visibility="gone" />
+                            android:textColor="@color/black" />
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
@@ -190,11 +169,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:orientation="horizontal">
 
                     <HorizontalScrollView
-                        android:id="@+id/horizontalScrollView2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="2">
@@ -221,13 +198,6 @@
         </LinearLayout>
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/bottomServiceLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+    <include layout="@layout/part_bottom_panel" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
