--- a/app/src/main/res/layout/edit_service.xml
+++ b/app/src/main/res/layout/edit_service.xml
@@ -48,7 +48,7 @@
                 <EditText
                     android:id="@+id/costEditServiceInput"
                     style="@style/mainBlockText"
-                    android:hint="@string/costAddServiceTB"
+                    android:hint="@string/cost"
                     android:inputType="number" />
             </LinearLayout>
 
