--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -50,8 +50,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.5"
-                    android:layout_gravity="bottom">
+                    android:layout_gravity="bottom"
+                    android:layout_weight="1.5">
 
                     <Button
                         android:id="@+id/logOutEditProfileBtn"
@@ -60,8 +60,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-            <LinearLayout
-                style="@style/block">
+            <LinearLayout style="@style/block">
 
                 <EditText
                     android:id="@+id/nameEditProfileInput"
@@ -69,8 +68,7 @@
                     android:hint="@string/nameAddServiceTB" />
             </LinearLayout>
 
-            <LinearLayout
-                style="@style/block">
+            <LinearLayout style="@style/block">
 
                 <EditText
                     android:id="@+id/surnameEditProfileInput"
@@ -78,8 +76,7 @@
                     android:hint="@string/surname" />
             </LinearLayout>
 
-            <LinearLayout
-                style="@style/block">
+            <LinearLayout style="@style/block">
 
                 <TextView
                     style="@style/mainBlockText"
@@ -98,8 +95,7 @@
             </LinearLayout>
 
             <!-- Телефон -->
-            <LinearLayout
-                style="@style/block">
+            <LinearLayout style="@style/block">
 
                 <Spinner
                     android:id="@+id/codeEditProfileSpinner"
@@ -112,7 +108,6 @@
                 <EditText
                     android:id="@+id/phoneEditProfileInput"
                     style="@style/mainBlockText"
-                    android:layout_marginBottom="5dp"
                     android:hint="@string/phone"
                     android:inputType="phone" />
             </LinearLayout>
