--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,9 @@
     <dimen name="photo_avatar_width">65dp</dimen>
     <dimen name="photo_avatar_height">65dp</dimen>
 
+    <dimen name="photo_small_avatar_width">25dp</dimen>
+    <dimen name="photo_small_avatar_height">25dp</dimen>
+
     <dimen name="bottom_panel_height">60dp</dimen>
 
     <dimen name="main_button_height">36dp</dimen>
